# pmos

./: .coverage  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_PLAN.md  README.md  date-picker-examples.html  docker-compose.yml  main.py  manage.py  nginx.conf  pyproject.toml
apps/: conftest.py
backend/: .env.example  Dockerfile  Dockerfile.dev  check_projects.py  check_user.py  init_test_user.py  migrate.py  pyproject.toml  reset_users.py  test_project_insert.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: auth.py  communications.py  data_dictionaries.py  data_item.py  development.py  export.py  modules.py  notifications.py  organization.py  permissions.py  plans.py  projects.py  requirements.py  resources.py  risks.py  stats.py  tasks.py  testing.py  users.py
backend/app/core/: database.py  events.py  security.py  websocket.py
backend/app/models/: base.py  data_dictionary.py  data_item.py  organization.py  project.py  resource.py  task.py  user.py
backend/app/schemas/: auth.py  development.py  module.py  notification.py  permission.py  plan.py  project.py  requirement.py  resource.py  risk.py  task.py  testing.py  user_settings.py
backend/app/services/: cache.py  cache_service.py  email.py  email_service.py
backend/tests/: conftest.py  test_auth.py  test_phase3_schemas.py  test_phase5_schemas.py  test_projects.py  test_resources.py  test_schemas.py  test_security.py  test_stats.py  test_tasks.py
data_backup/: pmos_backup_20260622_164126.json  pmos_backup_20260622_164325.json  pmos_backup_20260624_090850.json  pmos_backup_20260625_142707.json
deploy/: DEPLOYMENT.md  nginx.conf
design/: communication-management.html  config-management.html  dashboard.html  development-management.html  drill-management.html  plan-management.html  production-management.html  project-management.html  requirements-management.html  resource-management.html  risk-management.html  testing-management.html  work-management.html
docs/: DESIGN_PMOS.md  SPEC.md  USER_MANUAL.md
frontend/: .env.development  Dockerfile  Dockerfile.dev  index.html  package-lock.json  (+4 more)
(+377 files in other folders)
