[project]
name = "pmos"
version = "0.1.0"
description = "Project Management Operating System - 企业级项目管理平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15",
    "django-guardian>=2.4",
    "django-cors-headers>=4.3",
    "django-filter>=24.1",
    "django-simple-history>=3.5",
    "djangorestframework-simplejwt>=5.3",
    "psycopg2-binary>=2.9",
    "celery>=5.4",
    "redis>=5.0",
    "gunicorn>=22.0",
    "whitenoise>=6.6",
    "openpyxl>=3.1",
    "xlsxwriter>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pmos.settings.dev"
python_files = ["tests.py", "test_*.py"]
